fix: hide native details marker on Safari

--- a/packages/beeq/src/components/accordion/scss/bq-accordion.scss
+++ b/packages/beeq/src/components/accordion/scss/bq-accordion.scss
@@ -125,7 +125,8 @@
 
   border-style: var(--bq-accordion--collapsed-border-style);
 
-  &::marker {
+  &::marker,
+  &::-webkit-details-marker {
     @apply hidden;
   }
 }
